--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,17 +6,21 @@
     <title>Document</title>
     <style>
         body {
-            height: 100vh;
+            /*height: 100vh;
             background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center top;
+            background-image: url('imagens/wallpaper002.jpg');  
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;                      SHORTHAND
+            background-attachment: fixed;                    v         */
+
+            background: url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +31,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas cum reiciendis eius tempore blanditiis corrupti aperiam. Asperiores earum minus cumque delectus itaque, laborum velit, autem dicta veritatis, fugit impedit reiciendis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio deleniti nostrum asperiores sed recusandae sequi nobis illum aspernatur, inventore corrupti qui quam cupiditate ex. Illum architecto iusto voluptatum reprehenderit ducimus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab! Illo, sint. Facilis eius iure ea harum quaerat tenetur maiores aliquid, a modi. Reprehenderit iure ipsum necessitatibus accusamus animi dolores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, tempore deserunt fugiat nesciunt totam hic, modi molestiae commodi dignissimos porro ipsum, repellat eaque. Perferendis deleniti molestiae quo reiciendis porro blanditiis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati perferendis neque autem voluptate, possimus culpa necessitatibus. Molestiae sed facere, debitis ad quasi neque eligendi ex, amet obcaecati enim excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. At maxime accusamus hic deserunt exercitationem ex, aut odio repellat iure nesciunt sit voluptatibus obcaecati porro saepe excepturi quas assumenda rerum Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consequatur ex obcaecati accusamus mollitia soluta quae praesentium illum enim autem, non modi repudiandae atque molestiae quia, ipsum vitae, odio in. </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas cum reiciendis eius tempore blanditiis corrupti aperiam. Asperiores earum minus cumque delectus itaque, laborum velit, autem dicta veritatis, fugit impedit reiciendis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio deleniti nostrum asperiores sed recusandae sequi nobis illum aspernatur, inventore corrupti qui quam cupiditate ex. Illum architecto iusto voluptatum reprehenderit ducimus! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laborum, ab! Illo, sint. Facilis eius iure ea harum quaerat tenetur maiores aliquid, a modi. Reprehenderit iure ipsum necessitatibus accusamus animi dolores! Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, tempore deserunt fugiat nesciunt totam hic, modi molestiae commodi dignissimos porro ipsum, repellat eaque. Perferendis deleniti molestiae quo reiciendis porro blanditiis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati perferendis neque autem voluptate, possimus culpa necessitatibus. Molestiae sed facere, debitis ad quasi neque eligendi ex, amet obcaecati enim excepturi? Lorem ipsum dolor sit amet consectetur adipisicing elit. At maxime accusamus hic deserunt exercitationem ex, aut odio repellat iure nesciunt sit voluptatibus obcaecati porro saepe excepturi quas assumenda rerum Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga consequatur ex obcaecati accusamus mollitia soluta quae praesentium illum enim autem, non modi repudiandae atque molestiae quia, ipsum vitae, odio in. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde necessitatibus ea id et perferendis delectus sapiente alias debitis. Error commodi vel neque animi eos molestias officiis aspernatur necessitatibus, officia  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi itaque repellat ea eaque atque temporibus maxime enim quam sit? Cupiditate modi quia, nostrum quidem placeat molestiae reprehenderit consectetur iusto corporis? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas enim veritatis mollitia modi dicta dignissimos! Atque dolor explicabo aperiam maiores aut expedita totam, laborum soluta accusamus eaque! Cum, quae soluta! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus quisquam, nihil quo nostrum cupiditate velit praesentium deleniti eum voluptate recusandae est ex illo laudantium, autem officia totam beatae iure! Ducimus!Lorem Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ullam ad ex dignissimos velit, debitis quis natus eaque accusamus eligendi tempora recusandae eos aspernatur at in expedita quibusdam similique nulla impedit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas perspiciatis hic temporibus non, quam ipsum excepturi itaque? Accusantium praesentium vitae modi ut pariatur molestias. Quia repellendus ex labore perferendis provident? Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere saepe nulla amet facilis numquam repudiandae voluptatibus magni ullam doloribus rem laboriosam eum suscipit ab nihil, corrupti, aliquam deleniti quo quod. </p>
     </main>
     
 </body>
