--- a/desafios/desafio12/index.html
+++ b/desafios/desafio12/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743">Milton Duarte</a></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a></p>
         
     </header>
 
@@ -27,7 +27,7 @@
 
 
     
-        <section class="imagem">
+        <section class="imagem" id="img01">
             <p>
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
@@ -65,7 +65,7 @@
 
    
 
-        <section class="imagem">
+        <section class="imagem" id="img02">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
@@ -102,6 +102,6 @@
             </p>
         </section>
 
-    <footer> Site criadDani Corrêa, para o <a href="https://gustavoguanabara.github.io" target="_blank">Curso em vídeo.</a></footer>
+    <footer> Site criado por Dani Corrêa, para o <a href="https://gustavoguanabara.github.io" target="_blank">Curso em vídeo.</a></footer>
 </body>
 </html>
