--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -152,7 +152,7 @@
         <tfoot>
             <tr>
                 <th>Total de Habitantes</th>
-                <td class="num">00000000</td>
+                <td class="num">212.169.083</td>
             </tr>
 
         </tfoot>
