--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -17,6 +17,14 @@
             padding: 10px;
             text-align: center;
         }
+
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot {
             background-color: gray;
             color: white;
@@ -30,10 +38,11 @@
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>População dos Estados Brasileiros</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
             </tr>
            
         </thead>
@@ -151,8 +160,8 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td class="num">212.169.083</td>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num"><strong>212.169.083</strong></td>
             </tr>
 
         </tfoot>
