add um texto, e estilos css

--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -11,6 +11,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border : 1px solid black;
@@ -28,6 +29,19 @@
         thead, tfoot {
             background-color: gray;
             color: white;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: gray;
+        }
+
+        tbody > tr:nth-child(odd) {
+            background-color: white;
+        }
+        tbody > tr:nth-child(even) {
+            background-color: lightgray;
         }
 
         .num {
@@ -166,6 +180,7 @@
 
         </tfoot>
     </table>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis inventore ratione blanditiis voluptatibus eius culpa excepturi et voluptatum, in, eligendi commodi architecto pariatur aspernatur neque officiis recusandae error tenetur velit?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis impedit voluptate repellat, iusto quia incidunt. Qui blanditiis id fuga sed <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ea, voluptatem consequuntur impedit sequi dolore laborum nemo unde nihil doloribus ipsa assumenda voluptas dolorum repellat earum voluptatum error. A, nemo. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique provident aut magnam fugit dicta ex distinctio voluptatum incidunt tempora laboriosam illo cupiditate, obcaecati architecto ab animi soluta! Quasi, facilis aliquam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, magnam magni distinctio dolorum laudantium debitis inventore ipsa ipsam doloremque sed, cupiditate ut nemo soluta eos placeat doloribus? Eum, quia repudiandae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quas optio saepe esse vel molestiae labore quasi! Dolor pariatur quam, voluptatum qui saepe, totam assumenda voluptatem laboriosam dolores odio quaerat. Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cumque, incidunt ducimus laudantium et, quia recusandae possimus, vel quae doloremque dolor officia. Aut porro, a ad libero modi rerum suscipit. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quidem animi tempora ipsa maiores placeat vel debitis sequi incidunt. Deleniti delectus rerum fugit a pariatur nihil sed asperiores maiores soluta ad? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Saepe assumenda asperiores, rem explicabo cum delectus accusamus voluptatem quia porro fugit odit ex repellendus velit dolorum minima amet quibusdam, suscipit a. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, nobis. Facilis, dolore tempore officiis, itaque alias, est labore quidem iste ullam excepturi eius. Ea, accusamus placeat distinctio laborum eos ipsum!</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Delectus qui impedit repudiandae laborum omnis aspernatur eligendi, autem voluptas perspiciatis velit nostrum non eius tempora magni porro ratione optio possimus nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident cumque, deleniti consequuntur, quibusdam est iusto sit aliquid qui cupiditate perspiciatis doloribus ullam voluptatibus dolore? Dolor nobis iusto deleniti et modi? Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis illum, voluptatem aliquid ducimus enim perferendis fuga ea ipsam similique quasi architecto quod a neque rem veniam excepturi voluptatum. Obcaecati, nam? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio deserunt laudantium reiciendis, beatae dolorem corrupti quidem mollitia. Illo eaque autem ipsa, libero modi maxime, ea quisquam non dignissimos cupiditate porro! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis adipisci distinctio ea facilis dolorem nesciunt libero voluptatum excepturi architecto atque ipsum reiciendis repellat, culpa omnis? Velit ratione eaque molestias eveniet. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eius doloribus esse cum? Voluptatibus voluptatum, at quaerat debitis incidunt libero, exercitationem, laborum temporibus itaque eum minima assumenda quos repudiandae saepe quo. Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat laboriosam molestiae reiciendis a quaerat magni magnam nemo eligendi est minima ea praesentium qui, doloribus incidunt, dicta assumenda nulla! Tempore, fuga? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam eius rem fugit quibusdam animi quod vel reiciendis facilis quis magni nulla ad possimus, iste omnis iusto sunt blanditiis pariatur consectetur. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, obcaecati, commodi quasi ducimus sint officia esse expedita quibusdam soluta ab praesentium nesciunt, numquam magnam nam quo iste corrupti odio animi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus adipisci commodi earum placeat, voluptatem numquam fugiat doloremque voluptates. Laudantium non debitis, iste deleniti doloribus perspiciatis aliquam laborum ipsum vel ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, deserunt assumenda! Fuga explicabo facere minus harum sequi obcaecati, ipsa tenetur aliquid dolor quos quia animi dicta praesentium ipsam optio? Impedit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure vitae eligendi rerum totam omnis deleniti harum unde possimus, ad voluptatibus assumenda aliquid. Molestiae, laudantium mollitia tenetur est iusto natus consequatur? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Inventore, hic quod. Eius dolor unde itaque sit. Molestiae praesentium nostrum voluptates doloribus? Praesentium consectetur provident laudantium doloribus necessitatibus deleniti accusamus fugiat? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates numquam eligendi fuga consectetur, molestias vero, incidunt necessitatibus nobis debitis praesentium, nemo sint. Quis, nobis. Nihil eaque enim quod dolorem veritatis? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Soluta ratione, velit consequatur magni fugiat, exercitationem veniam magnam, labore praesentium voluptates expedita veritatis facilis molestias eveniet. Adipisci quo consequuntur tenetur aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias magni doloremque quia, provident repudiandae nostrum magnam culpa dignissimos mollitia. Esse voluptate sed maxime quia repudiandae iste ipsa, aliquid cum at. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum, saepe ad! Doloribus vero iure beatae harum expedita? Aliquid rerum voluptate hic aperiam, quaerat soluta id quis aliquam laborum alias sed. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nihil laboriosam ipsa dicta magni vitae magnam eius deleniti exercitationem illum expedita, enim dignissimos quas minus provident animi praesentium nesciunt distinctio. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia earum omnis dignissimos nesciunt corrupti optio repellat, eveniet quo officiis, voluptate labore. Corporis ducimus eum aliquam nobis maxime atque culpa fugit.</p>
 </body>
 </html>
