--- a/exercicios/ex023/tabela004.html
+++ b/exercicios/ex023/tabela004.html
@@ -29,14 +29,20 @@
         <caption>Filmes Favoritos</caption>
         <thead>
             <tr>
-                <th>Grupos</th>
-                <th>Nomes</th>
-                <th colspan="3">Filmes</th>
+                <th scope="col">Grupos</th>
+                <th scope="col">Nomes</th>
+                <th colspan="3" scope="colgroup">Filmes</th>
             </tr>
         </thead>
+        <tfoot>
+            <tr>
+                <th colspan="4" scope="row">Total</th>
+                <td>1000</td>
+            </tr>
+        </tfoot>
         <tbody>
             <tr>
-                <th rowspan="3">Mulheres</th>
+                <th rowspan="3" scope="rowgroup">Mulheres</th>
                 <td>Danielle Corrêa</td>
                 <td>Maze Runner</td>
                 <td>Harry Potter</td>
@@ -55,7 +61,7 @@
                 <td>Vingadores</td>
             </tr>
             <tr>
-                <th rowspan="3">Homens</th>
+                <th rowspan="3" scope="rowgroup">Homens</th>
                 <td>Matheus Vasconcelos</td>
                 <td>Maze Runner</td>
                 <td>Mate ou Morra</td>
