--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -10,7 +10,7 @@
         }
 
         iframe {
-            width: 95VW;
+            width: 95vw;
             height: 400px;
             border: 1px solid black;
         }
@@ -28,7 +28,8 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, quia. Quisquam, quae. Sint, quas! Quae, autem. Quia, pariatur. Quam, quae. Quisquam, quae. Quae, quia. Quia, quae. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, quia. Quisquam, quae. Sint, quas! Quae, autem. Quia, pariatur. Quam, quae. Quisquam, quae. Quae, quia. Quia, quae.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opcoes acima</h1>"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum maiores reprehenderit amet suscipit dolores ipsa hic nesciunt tempore saepe inventore, quos iusto assumenda in est architecto modi aspernatur officiis eum!</p>
+    <img src="./cursoemvideo.png">">
         <p>Infelizmente seu navegador nao e compativel</p>
     </iframe>
 </body>
